2015-11-27  Carlos O'Donell  <carlos@redhat.com>

	[BZ #14259]
	* Makeconfig: Rename localedir to complocaledir.
	Rename inst_localedir to inst_complocaledir.
	* aclocal.m4: Rename libc_cv_localedir to libc_cv_complocaledir.
	* config.make.in: Use complocaledir and libc_cv_complocaledir.
	* configure.ac: Use libc_cv_complocaledir.
	* configure: Regenerate.
	* locale/Makefile: Use complocaledir. Rename define -DLOCALEDIR to
	-DCOMPLOCALEDIR.
	* locale/findlocale.c: Use COMPLOCALEDIR.
	* locale/loadarchive.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* locale/programs/locarchive.c: Likewise.
	* localedata/Makefile: Use inst_complocaledir.
	* sysdeps/gnu/configure: Regenerate.
	* sysdeps/hppa/configure: Regenerate.
	* sysdeps/unix/sysv/linux/aarch64/configure: Regenerate.
	* sysdeps/unix/sysv/linux/mips/configure: Regenerate.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/configure: Regenerate.
	* sysdeps/unix/sysv/linux/s390/s390-64/configure: Regenerate.
	* sysdeps/unix/sysv/linux/sparc/sparc64/configure: Regenerate.
	* sysdeps/unix/sysv/linux/x86_64/64/configure: Regenerate.
	* sysdeps/unix/sysv/linux/x86_64/x32/configure: Regenerate.

2015-11-27  Andrew Senkevich  <andrew.senkevich@intel.com>

	[BZ #19058]
	* math/Makefile ($(inst_libdir)/libm.so): Added libmvec_nonshared.a to
	AS_NEEDED.
	* sysdeps/x86/fpu/bits/math-vector.h: Removed code with asm aliases
	workaround.
	* sysdeps/x86_64/fpu/Makefile (libmvec-support,
	libmvec-static-only-routines): Added new file.
	* sysdeps/x86_64/fpu/svml_finite_alias.S: New file.

2015-11-25  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* hurd/sigunwind.c (_hurdsig_longjmp_from_handler): Destroy reply port
	of interrupted RPC instead of restoring it.

	* sysdeps/i386/setjmp.S (__sigsetjmp): Add hidden_def.
	* sysdeps/mach/hurd/accept4.c (__libc_accept4): Remove
	libc_hidden_def.
	* sysdeps/mach/hurd/dl-sysdep.c (__libc_stack_end): Initialize to get